# webrtc

./: .clang-format  .favorites.json  .git-blame-ignore-revs  .gitignore  .gn  .vpython  .vpython3  1  AUTHORS  BUILD.gn  CMakeLists.txt  CODE_OF_CONDUCT.md  DEPS  DIR_METADATA  ENG_REVIEW_OWNERS  LICENSE  LICENSE_THIRD_PARTY  OWNERS  OWNERS_INFRA  PRESUBMIT.py  README.md  THIRD_PARTY_CHROMIUM_DEPS  THIRD_PARTY_CHROMIUM_DEPS.json  THIRD_PARTY_DEPS  THIRD_PARTY_WEBRTC_DEPS.json  ToString  WATCHLISTS  abseil-in-webrtc.md  all-renames.txt  baseline  better_test_config.diff  binary-size.config  buildbucket.config  commit-queue.cfg  common_types.cc  common_types.h  config.star  cr-buildbucket.cfg  crash-03b62c6ad6eb0528e263324e58520be59f83aec1  crash-17c9ae2483cf2c7d5bafecf972ece62f2f9ec45d  (+101 more)
api/config/: BUILD.gn  field_trial.h  field_trial_default.cc  field_trial_default.h  webrtc_config.h
api/media_factory/: BUILD.gn  create_media_factory.cc  create_media_factory.h  media_factory.h
api/numerics/: BUILD.gn  samples_stats_counter.cc  samples_stats_counter.h  samples_stats_counter_unittest.cc  time_series_set_exporter.h  time_series_set_exporter_create.cc  time_series_set_exporter_create.h
api/task_queue/: BUILD.gn  DEPS  default_task_queue_factory_gcd.cc  default_task_queue_factory_libevent.cc  default_task_queue_factory_stdlib.cc  default_task_queue_factory_stdlib_or_libevent_experiment.cc  default_task_queue_factory_win.cc  default_task_queue_unittest.cc  global_task_queue_factory.cc  global_task_queue_factory.h  pending_task_safety_flag.cc  pending_task_safety_flag.h  pending_task_safety_flag_unittest.cc  queued_task.h  task_queue.cc  task_queue.h  task_queue_base.cc  task_queue_base.h  task_queue_base_impl.cc  task_queue_base_impl.h  task_queue_default_factory.cc  task_queue_default_factory.h  task_queue_default_factory_gcd.cc  task_queue_default_factory_libevent.cc  task_queue_factory.h  task_queue_impl.cc  task_queue_impl.h  task_queue_test.cc  task_queue_test.h  thread_safe_pending_task_safety_flag.cc  thread_safe_pending_task_safety_flag.h  thread_safe_pending_task_safety_flag_unittest.cc
common_audio/rnn_vad/: BUILD.gn  biquad.cc  biquad.h  biquad_unittest.cc  common.h  downsample.cc  downsample.h  downsampling.h  feature_extraction_unittest.cc  features_extraction.cc  features_extraction.h  features_extraction_unittest.cc  kiss_fft.cc  kiss_fft.h  kiss_fft_unittest.cc  lp_residual.cc  lp_residual.h  lp_residual_unittest.cc  pitch_search.cc  pitch_search.h  pitch_search_unittest.cc  ring_buffer.h  ring_buffer_unittest.cc  rnn_data.proto  rnn_vad.cc  rnn_vad.h  rnn_vad_fft.cc  rnn_vad_fft.h  rnn_vad_fft_unittest.cc  rnn_vad_tool.cc  rnn_vad_unittest.cc  rnn_vad_weights.h  sequence_buffer.h  sequence_buffer_unittest.cc  spectral_features.cc  spectral_features.h  spectral_features_unittest.cc  symmetric_matrix_buffer.h  symmetric_matrix_buffer_unittest.cc  test_utils.cc  (+1 more)
crypto/: BUILD.gn  OWNERS  README.md  fakesslidentity.cc  fakesslidentity.h  hkdf.cc  hkdf.h  hkdf_unittest.cc  message_digest.cc  message_digest.h  message_digest_unittest.cc  messagedigest.h  openssl.h  openssl_adapter.cc  openssl_adapter.h  openssl_adapter_unittest.cc  openssl_certificate.cc  openssl_certificate.h  openssl_digest.cc  openssl_digest.h  openssl_identity.cc  openssl_identity.h  openssl_session_cache.cc  openssl_session_cache.h  openssl_session_cache_unittest.cc  openssl_stream_adapter.cc  openssl_stream_adapter.h  openssl_utility.cc  openssl_utility.h  openssl_utility_unittest.cc  openssladapter.cc  openssladapter.h  openssladapter_unittest.cc  opensslcertificate.cc  opensslcertificate.h  openssldigest.cc  openssldigest.h  opensslidentity.cc  opensslidentity.h  opensslsessioncache.cc  (+38 more)
examples/androidvoip/: AndroidManifest.xml  BUILD.gn  DEPS  OWNERS
experiments/: BUILD.gn  alr_experiment.cc  alr_experiment.h  field_trials.py
modules/bitrate_controller/: BUILD.gn  bitrate_controller_impl.cc  bitrate_controller_impl.h  loss_based_bandwidth_estimation.cc  loss_based_bandwidth_estimation.h  send_side_bandwidth_estimation.cc  send_side_bandwidth_estimation.h  send_side_bandwidth_estimation_unittest.cc
modules/congestion_controller/: BUILD.gn  DEPS  OWNERS  acknowledged_bitrate_estimator.cc  acknowledged_bitrate_estimator.h  alr_detector.cc  alr_detector.h  alr_detector_unittest.cc  delay_based_bwe.cc  delay_based_bwe.h  delay_based_network_control.cc  delay_based_network_control.h  delay_detector.h  delay_detector_interface.h  encoding_rate_controller.cc  encoding_rate_controller.h  goog_cc_network_control.cc  goog_cc_network_control.h  network_controllers.h  pacer_controller.cc  pacer_controller.h  probe_bitrate_estimator.cc  probe_bitrate_estimator.h  probe_bitrate_estimator_unittest.cc  probe_controller.cc  probe_controller.h  probe_controller_unittest.cc  receive_side_congestion_controller.cc  receive_side_congestion_controller_unittest.cc  receive_side_network_estimation.cc  receive_side_network_estimation.h  remb_throttler.cc  remb_throttler.h  remb_throttler_unittest.cc  send_side_congestion_controller.cc  send_side_congestion_controller_unittest.cc  send_time_history.cc  send_time_history.h  spike_detector.cc  spike_detector.h  (+5 more)
network_control/: BUILD.gn  DEPS  network_controller.cc  network_controller.h  network_message.cc  network_rtp.cc  network_types.cc  network_units.cc  network_units_unittest.cc
network_control/include/: network_control.h  network_controller.h  network_message.h  network_rtp.h  network_types.h  network_units.h
rtc_base/containers/: BUILD.gn  as_const.h  flat_map.h  flat_map_unittest.cc  flat_set.h  flat_set_unittest.cc  flat_tree.cc  flat_tree.h  flat_tree_unittest.cc  identity.h  invoke.h  move_only_int.h  not_fn.h  void_t.h
rtc_base/memory/: BUILD.gn  aligned_array.h  aligned_malloc.cc  aligned_malloc.h  always_valid_pointer.h  always_valid_pointer_unittest.cc  bit_reader.cc  bit_reader.h  bit_reader_unittest.cc  fifo_buffer.cc  fifo_buffer.h  fifo_buffer_unittest.cc
rtc_base/openssl/: BUILD.gn  openssl.h  openssladapter.cc  openssladapter.h  (+15 more)
(+9439 files in other folders)
