# Copyright (c) 2018 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../webrtc.gni")

rtc_static_library("experiments") {
  sources = [
    "alr_experiment.cc",
    "alr_experiment.h",
  ]
  deps = [
    # "..:webrtc_common",
    # "../:typedefs",
    "../api:optional",
    # "../logging:rtc_event_log_api",
    # "../network_control:network_control",
    # "../rtc_base:checks",
    # "../rtc_base:rtc_base",
    # "../rtc_base:rtc_base_approved",
    # "../rtc_base:rtc_numerics",
    # "../system_wrappers",
    # "../system_wrappers:field_trial_api",
    # "../system_wrappers:metrics_api",
  ]
}
