# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_source_set("webrtc_config") {
  visibility = [ "*" ]
  sources = [
    "webrtc_config.h",
  ]
  deps = []
}

rtc_source_set("field_trial_default") {
  visibility = [ "*" ]
  sources = [
    "field_trial_default.cc",
    "field_trial_default.h",
  ]
  deps = [
    ":webrtc_config",
    "../../system_wrappers:field_trial",
  ]
}
