# Copyright (c) 2018 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")
assert(rtc_enable_protobuf)
import("//third_party/protobuf/proto_library.gni")

group("rnn_vad") {
  testonly = true
  deps = [
    ":rnn_vad_tool",
    "../../api:array_view",
  ]
}

rtc_executable("rnn_vad_tool") {
  testonly = true
  sources = [
    "rnn_vad_tool.cc",
  ]
  deps = [
    ":lib",
    "../../rtc_base:rtc_base_approved",
    "../../test:test_support",
    "//api:array_view",
    "//common_audio:common_audio",
  ]
}

# proto_library("rnn_vad_data_proto") {
#   sources = ["rnn_data.proto"]
#   proto_out_dir = "common_audio/rnn_vad"
# }

rtc_static_library("lib") {
  sources = [
    "downsampling.h",
    "features_extraction.cc",
    "features_extraction.h",
    "rnn_vad.cc",
    "rnn_vad.h",
    "rnn_vad_weights.h",
    "sequence_buffer.h",
  ]
  deps = [
    "../..:webrtc_common",
    "../../:typedefs",
    "../../api:array_view",
    "../../common_audio",
    "../../rtc_base:checks",

    # "../../rtc_base:protobuf_utils",
    "../../rtc_base:rtc_base_approved",

    # ":rnn_vad_data_proto",
    "//system_wrappers:system_wrappers",
  ]

  # all_dependent_configs = ["//third_party/protobuf:protobuf_config"]
  # visibility = [ ":*" ]  # Only targets in this file can depend on this.
}

rtc_source_set("unittest") {
  testonly = true
  sources = [
    "rnn_vad_unittest.cc",
  ]
  deps = [
    ":lib",
    "../..:webrtc_common",
    "../../:typedefs",
    "../../api:array_view",
    "../../api:optional",
    "../../common_audio",

    # "../../rtc_base:protobuf_utils",
    "../../rtc_base:rtc_base_approved",
    "../../test:test_support",
    "//testing/gmock",
    "//testing/gtest",

    # ":rnn_vad_data_proto",
  ]
}
