# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (rtc_include_tests) {
  rtc_source_set("bitrate_controller_unittests") {
    testonly = true

    sources = []
    deps = [
      ":bitrate_controller",
      "../../api/rtc_event_log",
      "../../logging:mocks",
      "../../logging:rtc_event_bwe",
      "../../test:test_support",
    ]
  }
}
