# Copyright (c) 2017 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")
if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

rtc_source_set("aligned_array") {
  sources = [
    "aligned_array.h",
  ]
  deps = [
    ":aligned_malloc",
    "..:rtc_base_approved",
  ]
}

rtc_source_set("aligned_malloc") {
  sources = [
    "aligned_malloc.cc",
    "aligned_malloc.h",
  ]
  deps = [
    "../..:webrtc_common",
  ]
}

rtc_source_set("unittests") {
  testonly = true
  sources = [
    "aligned_array_unittest.cc",
    "aligned_malloc_unittest.cc",
  ]
  deps = [
    ":aligned_array",
    ":aligned_malloc",
    "../..:webrtc_common",
    "../../test:test_support",
  ]
}
