# Copyright (c) 2017 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")
if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

rtc_source_set("cpu_features") {
  sources = [
    "cpu_features.cc",
    "cpu_features_wrapper.h",
  ]
  deps = [
    "../..:webrtc_common",
  ]
  if (is_android) {
    sources += [ "cpu_features_android.c" ]
    deps += [ "//third_party/android_tools:cpu_features" ]
  }
  if (is_linux && !build_with_chromium) {
    sources += [ "cpu_features_linux.c" ]
  }
}

rtc_source_set("cpu_info") {
  sources = [
    "cpu_info.cc",
    "cpu_info.h",
  ]
  deps = [
    "..:rtc_base_approved",
    "../..:webrtc_common",
  ]
}

rtc_source_set("sleep") {
  sources = [
    "sleep.cc",
    "sleep.h",
  ]
}
