# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (rtc_enable_libevent) {
  rtc_source_set("task_queue_libevent") {
    visibility = [ "../../api/task_queue:default_task_queue_factory" ]
    sources = [
      "task_queue_libevent.cc",
      "task_queue_libevent.h",
    ]
    deps = [
      "..:checks",
      "..:criticalsection",
      "..:logging",
      "..:macromagic",
      "..:platform_thread",
      "..:platform_thread_types",
      "..:safe_conversions",
      "..:timeutils",
      "../../api/task_queue",
      "../../api/task_queue:task_queue_factory",
      "//third_party/abseil-cpp/absl/memory",
    ]
    if (rtc_build_libevent) {
      deps += [ "//base/third_party/libevent" ]
    }
  }
}
